--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         <td>
           <div class="container">
             <div class="box">
-              <img src="/assets/Logos/AWSMascot.svg" alt="Mascot Logo" class="mascot"/>
+              <img src="assets/Logos/AWSMascot.svg" alt="Mascot Logo" class="mascot"/>
               <h1>Hi Name,<br/>your Photobooth<br/>pictures are now ready!</h1>
               <p>You can access your pictures captured in the photobooth by going to
                 <a href="#" class="dl-link">https://awsphotobooth.com</a>
