Fix absolute position of logo

--- a/index.html
+++ b/index.html
@@ -34,10 +34,12 @@
       width: 100%;
       padding: 6rem;
       table-layout: fixed;
+     
     }
 
     .main-container{
       width: 60rem;
+      position: relative;
     }
 
     .header{
@@ -71,7 +73,6 @@
     }
 
     .container{
-      display: relative;
       padding: 5.9rem 8.5rem;
     }
     .box{
@@ -122,9 +123,7 @@
 
     .mascot{
       position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%,27%);
+      transform: translate(-50%,-80%);
     }
 
     hr.solid-2{
