add line break for link

--- a/indexFinal.html
+++ b/indexFinal.html
@@ -33,7 +33,7 @@
                         <td style="background-color: #FFEED8; border-radius: 11px; text-align: center; padding: 5.3rem 2.7rem;">
                             <img src="https://i.postimg.cc/MKTbrpy0/AWSMascot.png" alt="Mascot Logo" style="display: block; margin: 0 auto; max-width: 100%;">
                             <h1 style="font-size: 21px; font-weight: 600; line-height: 1.2; color: #37475A; margin-top: 1.6rem; margin-bottom: 4rem;">Hi Name,<br/>your Photobooth<br/>pictures are now ready!</h1>
-                            <p style="margin-bottom: 3.3rem;">You can access your pictures captured in the photobooth by going to <a href="#" style="color: #2230F6; font-weight: 500; text-decoration: none;">https://awsphotobooth.com</a></p>
+                            <p style="margin-bottom: 3.3rem;">You can access your pictures captured in the photobooth by going to <br/><a href="#" style="color: #2230F6; font-weight: 500; text-decoration: none;">https://awsphotobooth.com</a></p>
                             <div style="text-align: center;">
                                 <a href="#" style="display: inline-block; background-color: #FEBD69; text-decoration: none; color: #37475A; font-weight: 500; border-radius: 2rem; padding: 0.8rem 1.6rem; border: 0.2rem solid #C19050; transition: all 0.3s;">Download Photo</a>
                             </div>
