added placeholders for dynamic rendering

--- a/indexFinal.html
+++ b/indexFinal.html
@@ -24,7 +24,7 @@
                     <tr>
                         <td>
                             <p>
-                                Dear Name,<br><br/>Thank you for joining us at AWS Community Day 2023 and for using the AWS Photobooth app. Your participation and consideration were greatly appreciated.
+                                Dear {{ name }},<br><br/>Thank you for joining us at AWS Community Day 2023 and for using the AWS Photobooth app. Your participation and consideration were greatly appreciated.
                             </p>
                             <hr style="background-color: #C2C2C2; height: 0.2rem; border: none; margin-top: 3.5rem; margin-bottom: 3.6rem;">
                         </td>
@@ -35,7 +35,7 @@
                             <h1 style="font-size: 21px; font-weight: 600; line-height: 1.2; color: #37475A; margin-top: 1.6rem; margin-bottom: 4rem;">Hi Name,<br/>your Photobooth<br/>pictures are now ready!</h1>
                             <p style="margin-bottom: 3.3rem;">You can access your pictures captured in the photobooth by going to <br/><a href="#" style="color: #2230F6; font-weight: 500; text-decoration: none;">https://awsphotobooth.com</a></p>
                             <div style="text-align: center;">
-                                <a href="#" style="display: inline-block; background-color: #FEBD69; text-decoration: none; color: #37475A; font-weight: 500; border-radius: 2rem; padding: 0.8rem 1.6rem; border: 0.2rem solid #C19050; transition: all 0.3s;">Download Photo</a>
+                                <a href={{ download_link}} style="display: inline-block; background-color: #FEBD69; text-decoration: none; color: #37475A; font-weight: 500; border-radius: 2rem; padding: 0.8rem 1.6rem; border: 0.2rem solid #C19050; transition: all 0.3s;">Download Photo</a>
                             </div>
                         </td>
                     </tr>
