updatedFinal with socmed links and logos footer

--- a/indexFinal.html
+++ b/indexFinal.html
@@ -24,7 +24,7 @@
                     <tr>
                         <td>
                             <p>
-                                Dear {{ name }},<br><br/>Thank you for joining us at AWS Community Day 2023 and for using the AWS Photobooth app. Your participation and consideration were greatly appreciated.
+                                Good Day,<br><br/>Thank you for joining us at AWS Community Day 2023 and for using the AWS Photobooth app. Your participation and consideration were greatly appreciated.
                             </p>
                             <hr style="background-color: #C2C2C2; height: 0.2rem; border: none; margin-top: 3.5rem; margin-bottom: 3.6rem;">
                         </td>
@@ -64,9 +64,8 @@
                         <td style="grid-area: 2/1/3/3;">
                             <p style="font-size: 12px; color: #999999; margin-right: 7rem;">Join us as we share success stories, use cases from industry leaders, and many more AWSomeness.</p>
                             <div style="display: flex; gap: 2.4rem; justify-content: flex-end;">
-                                <a href="#" style="display: inline-block;"><img src="https://i.postimg.cc/wvd0DDjK/Twitter.png" alt="Twitter" style="display: block;"></a>
-                                <a href="#" style="display: inline-block;"><img src="https://i.postimg.cc/cJ3FKFZM/Facebook.png" alt="Facebook" style="display: block;"></a>
-                                <a href="#" style="display: inline-block;"><img src="https://i.postimg.cc/rmCgjzDD/LinkedIn.png" alt="LinkedIn" style="display: block;"></a>
+                                <a href="https://www.facebook.com/awscommunitydayph" style="display: inline-block;"><img src="https://i.postimg.cc/rF7RQHTT/FB.png" alt="Facebook" style="display: block;"></a>
+                                <a href="https://www.instagram.com/awscommunitydayph/" style="display: inline-block;"><img src="https://i.postimg.cc/Hk5cKtWy/IG.png" alt="Instagram" style="display: block;"></a>
                             </div>
                         </td>
                     </tr>
